# tslac

./: .gitignore  Design.md  Design2.md  Design3.md  LICENSE  README.md  SMOKE_TESTS.md  app.py  cleaner.py  collector.py  config.py  config.yaml  config_runtime.py  config_ui.py  constant_contact_exporter.py  constants.py  curation.yaml  doc_archive.py  doc_cache.py  doc_extract.py  doc_pipeline.py  doc_sources.py  doc_store.py  doc_types.py  export_cc.py  export_preview.py  gdrive_service.py  logutil.py  markdown_request.md  markdown_request.txt  models.py  newsletter_bot.py  openai_client.py  preview_generator.py  pyproject.toml  pytest.ini  render.py  requirements-dev.txt  requirements.txt  run.py  (+9 more)
collect/: collector.py  collector_legacy.py  models.py  parse_homepage.py  parse_info.py  parse_info_index.py  rules.py
core/: models.py  render.py  templates.py
docsys/: archive.py  cache.py  pipeline.py  sources.py  store.py  types.py
export/: constant_contact_exporter.py
gdrive/: gdrive_service.py
output/: candidates_latest.json  newsletter_preview.html  newsletter_preview.json  watch_results_latest.json
preview/: preview_generator.py
routes/: api.py  candidates.py  crop.py  curate_article.py  curate_doc.py  export.py  health.py  home.py  img_proxy.py  preview.py  quit.py  static_files.py  watch.py
scripts/: smoke_test.py  test_doc_pipeline.py  test_drive.py  test_drive_folders.py  test_openapi_summary.py
services/: api_service.py  candidate_view.py  candidates_service.py  content_ids.py  curate_article_service.py  curate_doc_service.py  export_service.py  (+2 more)
(+68 files in other folders)
